<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_200"
    tools:context=".GrasaCorporalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingresar_datos"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_200"
        android:weightSum="3">

        <EditText
            android:id="@+id/mc_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:hint="Masa Corp..."
            android:inputType="numberDecimal" />

        <EditText
            android:layout_marginStart="15dp"
            android:id="@+id/edad_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Edad..."
            android:layout_weight="1"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="15dp">

            <RadioButton
                android:id="@+id/opt_hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hombre"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/opt_mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mujer"/>
        </RadioGroup>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_200">

            <Button
                android:id="@+id/btn_calculo_grasa_corporal"
                android:layout_margin="40dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/calcular_indice_grasa_corporal"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:contentDescription="@string/calcular_fbtn"
        android:id="@+id/fab"
        android:layout_gravity="end|bottom"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_indice_grasa" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>